# rarpc

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: rar15_filter_probe.rs  rar15_gpu_bench.rs  rar3_gpu_parity.rs
kernels/: aes_device.cuh  common.cuh  rar15_filter.cu  rar3_kdf.cu  rar5_kdf.cu  sha1_device.cuh  sha1_hc.cuh  sha1_hc_carry.inc  sha1_hc_switch.cuh  sha256_device.cuh
src/: lib.rs  main.rs
src/attack/: bruteforce.rs  combinator.rs  engine.rs  markov.rs  mask.rs  mod.rs  rules.rs  source.rs  wordlist.rs
src/cpu/: fallback.rs
src/gpu/: batch.rs  context.rs  mod.rs  rar15_gpu.rs  rar3_gpu.rs  rar5_gpu.rs
src/gui/: mod.rs
src/rar/: bitinput.rs  mod.rs  parser.rs  rar15.rs  rar3.rs  rar5.rs  unpack15.rs
src/session/: mod.rs
tests/: rar15_gpu_parity.rs
